Added vehicle to the response of get rental request